--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ p {
   border: 1px solid #00a4e5;
   font-weight: bold;
   font-size: 13px;
-  padding: 11px 29px;
+  padding: 8px 29px;
 }
 
 .container {
@@ -268,22 +268,25 @@ p {
 }
 .mailing__form {
   position: relative;
+  height: 35px;
+  align-items: center;
+  display: flex;
 }
+
 .mailing__input {
-  padding: 10px;
   width: 250px;
   outline: none;
   border: 1px solid #979797;
   box-sizing: border-box;
+  height: 100%;
+  padding: 10px;
 }
 .mailing__input::placeholder {
   font-size: 14px;
   line-height: 19px;
 }
 .mailing-button {
-  line-height: 100%;
   width: fit-content;
   height: 100%;
-  position: absolute;
-  padding: 11px 49px;
+  display: inline-block;
 }
