--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ li {
   margin: 0;
 }
 a {
+  display: block;
   text-transform: uppercase;
   text-decoration: none;
   color: #fff;
@@ -57,6 +58,9 @@ p {
   text-align: center;
   height: 95vh;
   position: relative;
+}
+.hamburger {
+  display: none;
 }
 .offer {
   position: absolute;
@@ -261,7 +265,7 @@ p {
 
 .sending-mail {
   background-color: #171819;
-  padding: 30px;
+  padding: 30px 0;
 }
 .mailing {
   display: flex;
